fichier_yml/backend-deploiement.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: innov
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: eddyrakotonirina/inoov-t:backend
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: backend-storage
              mountPath: /app/uploads
      volumes:
        - name: backend-storage
          persistentVolumeClaim:
            claimName: backend-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: innov
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
