fichier_yml/mongo-express.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: innov
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: eddyrakotonirina/inoov-t:express
          ports:
            - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: innov
spec:
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort : 30001
  type: NodePort  # Change à LoadBalancer si nécessaire
