fichier_yml/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: innov
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: eddyrakotonirina/inoov-t:mongo_innov
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-pvc  # Référence au PVC
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: innov
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  clusterIP: None  # Service sans IP interne pour accéder à MongoDB depuis d'autres pods dans le cluster
