fichier_yml/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazariko-ingress
  namespace: innov
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: public
  rules:
  - host: www.bazariko.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-service
            port:
              number: 80
  - host: api.bazariko.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000
  - host: api.bazariko.com
    http:
      paths:
      - path: /uploads
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000
  tls:
  - hosts:
    - www.bazariko.com
    - api.bazariko.com
    secretName: bazariko-tls
